<resources>
    //General
    <string name="app_name">My_Bop_It_App</string>
    <string name="my_app_name">Bop it mobile</string>
    <string name="author">Samuel Quiroz </string>

    //Activity names
    <string name="act_name_About">Acerca de </string>
    <string name="desc_About">Esta aplicación fue desarrollada por Samuel Quiroz y tiene como finalidad recrear el juego "Bop it" en un dispositivo movil, haciendo uso de los sensores característicos de estos mismo. </string>
    <string name="act_name_Prefences">Preferencias </string>
    <string name="act_name_Play">Jugar </string>

    //Description for images
    <string name="desc_logo_Utal">Logo de la universidad de Talca </string>
    <string name="desc_logo_IDVRV">Logo de Ingeniería en desarrollo de videojuegos y realidad virtual </string>
    <string name="title_activity_settings">SettingsActivity</string>

    //Configuraciones
    <string name="messages_header">Inicio</string>
    <string name="difficulty_header">Dificultad</string>
    <string name="time">Tiempo en segundos</string>

    //Jugar
    <string name="win">Ganar</string>
    <string name="lose">Perder</string>
    <string name="back">Salir</string>
    <string name="Lose_title">Perdiste</string>
    <string name="reset">Reiniciar</string>
    <string name="myScore_text">Mi puntaje</string>
    <string name="bestScore_text">Mejor puntaje</string>

    //Acciones
    <string name="Shake_title">Agitar</string>
    <string name="Swipe_title">Deslizar</string>
    <string name="Fling_title">Corta</string>
    <string name="Tap_title">Toca</string>
    <string name="LongTap_title">Matén presionado</string>


</resources>