<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/App_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_app_name"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.319" />

    <ImageView
        android:id="@+id/Logo_IDVRV"
        android:layout_width="303dp"
        android:layout_height="188dp"
        android:layout_marginStart="-10dp"
        android:layout_marginBottom="-55dp"
        android:contentDescription="@string/desc_logo_IDVRV"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/logo_carrera" />

    <ImageView
        android:id="@+id/Logo_Utal"
        android:layout_width="130dp"
        android:layout_height="144dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="140dp"
        android:contentDescription="@string/desc_logo_Utal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_universidad" />

    <Button
        android:id="@+id/Preferencias_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="141dp"
        android:text="@string/act_name_Prefences"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/App_name" />

    <Button
        android:id="@+id/Acerca_De_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="150dp"
        android:text="@string/act_name_About"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Preferencias_btn" />

    <Button
        android:id="@+id/Jugar_btn"
        android:layout_width="168dp"
        android:layout_height="85dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="120dp"
        android:text="@string/act_name_Play"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Acerca_De_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>